--- a/views/create.html
+++ b/views/create.html
@@ -144,7 +144,7 @@
     </section>
 
 <script id="review-template"></script>
-
+<script id="review-template-buttons"></script>
 
     <!-- End Form Sample -->
 
