--- a/views/index.html
+++ b/views/index.html
@@ -73,7 +73,7 @@
           </div>
         </div>
 
-    <!-- map section -->
+    <!- map section -->
     <section class="map-section">
       <div class="find-hero-button">
         <button type="button" class="btn btn-primary" id="map-button">Find Hero</button>
@@ -97,7 +97,7 @@
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <h2>Reviews</h2>
-          <div class="col-xs-4 col-md-offset-5">
+          <div class="col-xs-4 col-xs-offset-5">
             <button type="button" class="btn btn-primary btn-sm" id="create-button">Create Review</button>
           </div>
           <!-- sandwich reviews -->
