--- a/views/index.html
+++ b/views/index.html
@@ -76,7 +76,7 @@
     <!- map section -->
     <section class="map-section">
       <div class="find-hero-button">
-        <button type="button" class="btn btn-primary" id="map-button">Find Hero</button>
+        <button type="button" class="btn btn-primary btn-md" id="map-button">Find Hero</button>
       </div>
       <article class="container">
         <div class="row">
@@ -98,7 +98,7 @@
         <div class="col-md-10 col-md-offset-1">
           <h2>Reviews</h2>
           <div class="col-xs-4 col-xs-offset-5">
-            <button type="button" class="btn btn-primary btn-sm" id="create-button">Create Review</button>
+            <button type="button" class="btn btn-primary btn-md" id="create-button">Create Review</button>
           </div>
           <!-- sandwich reviews -->
           <div class="appendReviews">
