--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -47,7 +47,7 @@
 
   .jumbotron {
     /*background-color: #0B543E;*/
-    background-color: #A4D0C9;
+    background-color: #83CBFF;
     color: #FBD900;
   }
 
@@ -66,7 +66,7 @@
 
   .reviewIndividual {
     border: solid 2px black;
-    background-color: #E69136;
+    background-color: rgba(250, 240, 250, 0.3);
     margin-bottom: 15px;
     border-radius: 0px 70px 0px 0px;
   }
@@ -89,13 +89,13 @@
 
   .whole-page {
     /*background-color: #0B543E;*/
-    /*background: linear-gradient(20deg, #74C5FF, #FBD601 20%, #74C5FF);*/
-    background: linear-gradient(180deg, #97CFE6, #FBD601);
+    /*background: linear-gradient(80deg, #C0281B, black 40%, #C0281B);*/
+    background: linear-gradient(225deg, #74C5FF, white);
   }
 
-  body {
+  /*body {
     background-color: #0B543E;
-  }
+  }*/
 
   .site-title {
     padding-bottom: 15px;
