--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <div class="whole-page">
-      <div class="jumbotron">
+      <div class="bad-idea">
         <div class="container site-title">
           <h1 class="font-effect-3d">Where's My Hero!?</h1>
         </div>
