got restaurant data

--- a/views/create.html
+++ b/views/create.html
@@ -39,6 +39,25 @@
       <div class="row">
       <div class="col-md-10 col-md-offset-1">
 
+        <!-- ***** restaurant selection ***** -->
+        <section id='review-form' class="container">
+          <div class="row">
+            <div class="col-md-9">
+              <form class="form-horizontal business-search">
+                <div class="form-group">
+                  <div class="col-xs-12" id="giphy">
+                    <article class="col-xs-12">
+                      <input id="business-name" name="term" type="text" placeholder="Find a restaurant near you" class="form-control input-md" required="">
+                    </article>
+                  </div>
+                  <button id="singlebutton" name="gifSubmit" class="btn btn-primary center-block">Find Restaurant</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </section>
+
+
         <!-- ***** gif selection ***** -->
         <section id='review-form' class="container">
           <div class="row">
