--- a/views/index.html
+++ b/views/index.html
@@ -25,8 +25,7 @@
   </head>
 
   <body>
-    <div class="whole-page">
-      <div class="bad-idea">
+      <div class="title-section">
         <div class="container site-title">
           <h1 class="font-effect-3d">Where's My Hero!?</h1>
         </div>
@@ -106,7 +105,7 @@
           <div class="col-md-10 col-md-offset-1">
             <h2>Reviews</h2>
             <div class="col-xs-4 col-md-offset-5">
-              <button type="button" class="btn btn-primary btn-sm" id="create-button">Create Review</button>
+              <button type="button" class="btn btn-primary btn-md" id="create-button">Create Review</button>
             </div>
             <!-- sandwich reviews -->
             <div class="appendReviews">
@@ -134,7 +133,5 @@
       </section>
       <script id="selectableGif-template2" type="text/x-handlebars-template"></script>
       <script id="gif-choice" type="text/x-handlebars-template"></script>
-
-    </div>
   </body>
 </html>
