restaurants incorporated into new review form

--- a/views/index.html
+++ b/views/index.html
@@ -181,6 +181,6 @@
     </section>
     <script id="selectableGif-template2" type="text/x-handlebars-template"></script>
     <script id="gif-choice" type="text/x-handlebars-template"></script>
-
+    <script id="restaurant-template" type="text/x-handlebars-template"></script>
   </body>
 </html>
