--- a/views/create.html
+++ b/views/create.html
@@ -33,30 +33,51 @@
         <img src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="250" style="max-width: 320px">
       </div>
     </div>
+
+    <!-- ***** restaurant selection ***** -->
+    <section id='business-form' class="business-forms container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <form class="form-horizontal business-search">
+            <div class="form-group">
+              <div class="col-xs-12">
+                <article class="col-xs-12">
+                  <input id="business-name" name="term" type="text" placeholder="Find a restaurant near you" class="form-control input-md" required="">
+                </article>
+              </div>
+              <button id="singlebutton" name="businessSearch" class="btn btn-primary center-block">Find Restaurant</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section id='business-submit-form' class="business-forms container hidden">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <form class="form-horizontal business-submit">
+            <div class="form-group">
+              <div class="col-xs-12">
+                <article class="col-xs-12 restaurant-list">
+                  <script id="restaurant-template" type="text/x-handlebars-template">
+                      <input type="radio" name="restaurant" value="{{restaurantName}}"> {{restaurantName}}<br>
+                  </script>
+                </article>
+                <button id="singlebutton" name="restaurantSubmit" class="btn btn-primary center-block">Select Restaurant</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+
+
+
     <!-- Begin Form Sample -->
-    <section id='review-form' class="container">
+    <section id='review-form' class="container hidden">
 
       <div class="row">
       <div class="col-md-10 col-md-offset-1">
-
-        <!-- ***** restaurant selection ***** -->
-        <section id='review-form' class="container">
-          <div class="row">
-            <div class="col-md-9">
-              <form class="form-horizontal business-search">
-                <div class="form-group">
-                  <div class="col-xs-12" id="giphy">
-                    <article class="col-xs-12">
-                      <input id="business-name" name="term" type="text" placeholder="Find a restaurant near you" class="form-control input-md" required="">
-                    </article>
-                  </div>
-                  <button id="singlebutton" name="gifSubmit" class="btn btn-primary center-block">Find Restaurant</button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </section>
-
 
         <!-- ***** gif selection ***** -->
         <section id='review-form' class="container">
@@ -96,7 +117,10 @@
             <!-- Form Name -->
             <legend>Add New Review</legend>
 
-            <!-- gif added to crete review -->
+            <!-- input for restaurant name -->
+            <input id="restaurant-input" type="hidden" name="gif">
+
+            <!-- gif added to create review -->
             <section class="container selected-gif">
               <div class="row">
                 <div class="col-xs-12">
@@ -108,6 +132,7 @@
                 </div>
               </div>
             </section>
+
             <!-- Text input-->
             <div class="form-group">
               <label class="col-md-4 control-label" for="stars">Stars</label>
