--- a/views/index.html
+++ b/views/index.html
@@ -28,9 +28,10 @@
       <div class="title-section">
         <div class="container site-title">
           <h1 class="font-effect-3d">Where's My Hero!?</h1>
-        </div>
-        <div class="site-logo">
-          <img src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="250" style="max-width: 320px">
+          <div class="picDiv">
+            <img class="sandwichBatman" src="https://aunicornwithcancer.files.wordpress.com/2013/01/hero_sandwich_by_stanlydan-d39c77b.jpg" height="175" style="max-width: 320px">
+            <img class="sandwichPic" src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="175" style="max-width: 320px">
+          </div>
         </div>
       </div>
 
@@ -71,7 +72,7 @@
                 <input type="submit" class="btn btn-block btn-primary" value="Log In">
               </div>
             </div>
-          </div>
+          </div> -->
       <!-- map section -->
       <section class="map-section">
         <div class="find-hero-button">
