--- a/views/index.html
+++ b/views/index.html
@@ -72,7 +72,7 @@
                 <input type="submit" class="btn btn-block btn-primary" value="Log In">
               </div>
             </div>
-          </div>
+          </div> -->
 
       <!-- map section -->
       <section class="map-section">
