--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -87,7 +87,7 @@
     text-align: center;
   }
 
-  .whole-page {
+  body {
     /*background-color: #0B543E;*/
     /*background: linear-gradient(80deg, #C0281B, black 40%, #C0281B);*/
     background: linear-gradient(225deg, #74C5FF, white);
