fixed heroku deployment bug and cancel buttons

--- a/views/edit.html
+++ b/views/edit.html
@@ -135,7 +135,7 @@
               <label class="col-md-4 control-label" for="singlebutton">Save Review</label>
               <div class="col-md-4">
                 <button id="singlebuttonSubmit" name="singlebutton" class="btn btn-primary">Submit</button>
-                <button id="singlebuttonCancel" name="singlebutton" class="btn btn-primary">Cancel Revision</button>
+                <a id="Cancel" href="../" name="singlebuttonCancel" class="btn btn-primary">Cancel Review</a>
               </div>
             </div>
           </fieldset>
