--- a/views/index.html
+++ b/views/index.html
@@ -26,11 +26,23 @@
 
   <body>
       <div class="title-section">
-        <div class="container site-title">
-          <h1 class="font-effect-3d">Where's My Hero!?</h1>
-          <div class="picDiv">
-            <img class="sandwichBatman" src="https://aunicornwithcancer.files.wordpress.com/2013/01/hero_sandwich_by_stanlydan-d39c77b.jpg" height="175" style="max-width: 320px">
-            <img class="sandwichPic" src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="175" style="max-width: 320px">
+        <div class="container">
+          <div class="site-title">
+            <h1 class="font-effect-3d">Where's My Hero!?</h1>
+          </div>
+          <div class="picDiv row">
+            <div class="col-xs-2 batman-box">
+              <img class="sandwichBatman" src="https://aunicornwithcancer.files.wordpress.com/2013/01/hero_sandwich_by_stanlydan-d39c77b.jpg" height="175" style="max-width: 320px">
+            </div>
+            <div class="col-xs-4 batman-chat">
+              <!-- batman chat goes here -->
+            </div>
+            <div class="col-xs-4 hero-chat">
+              <!-- hero chat goes here -->
+            </div>
+            <div class="col-xs-2 hero-box">
+              <img class="sandwichPic" src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="175" style="max-width: 320px">
+            </div>
           </div>
         </div>
       </div>
