--- a/views/index.html
+++ b/views/index.html
@@ -35,10 +35,10 @@
               <img class="sandwichBatman" src="https://aunicornwithcancer.files.wordpress.com/2013/01/hero_sandwich_by_stanlydan-d39c77b.jpg" height="175" style="max-width: 320px">
             </div>
             <div class="col-xs-4 batman-chat">
-              <!-- batman chat goes here -->
+              <img id="batwich-bubble" src="http://cliparts.co/cliparts/8TG/ErX/8TGErXjqc.png" alt="hero chat bubble" height="175" width="100%">
             </div>
             <div class="col-xs-4 hero-chat">
-              <!-- hero chat goes here -->
+              <img id="hero-bubble" src="http://cliparts.co/cliparts/8TG/ErX/8TGErXjqc.png" alt="hero chat bubble" height="175" width="100%">
             </div>
             <div class="col-xs-2 hero-box">
               <img class="sandwichPic" src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="175" style="max-width: 320px">
