--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -86,7 +86,7 @@
 
   body {
     /*font-family: Calibria, serif;*/
-    background-color: #0B543E;
+    /*background-color: #0B543E;*/
   }
 
   .site-title {
@@ -101,8 +101,17 @@
     margin-top: 20px;
   }
 
+/*Create Page Formatting*/
 
-/*The following is styling related to the map section*/
+li:hover {
+  background-color: rgba(45, 77, 150, .5);
+}
+
+li {
+  text-align: center;
+}
+
+/*Styling related to the map section*/
 
 #mapPlacement {
   height: 400px; /*map size has to be created manually. Feel free to edit for beautification*/
