--- a/views/index.html
+++ b/views/index.html
@@ -76,7 +76,7 @@
       <!-- map section -->
       <section class="map-section">
         <div class="find-hero-button">
-          <button type="button" class="btn btn-primary" id="map-button">Find A Hero</button>
+          <button type="button" class="btn btn-findHero" id="map-button">Find A Hero</button>
         </div>
         <article class="container">
           <div class="row">
@@ -85,15 +85,15 @@
               <section class="container-fluid">
                 <div class="row">
                   <div class="current-location col-lg-6 col-xs-12">
-                    <button type="button" class="btn btn-primary btn-lg" id="current-location">Closest Food To My Face!</button>
+                    <button type="button" class="btn btn-closest btn-lg" id="current-location">Closest Food To My Face!</button>
                   </div>
                   <div class="change-location col-lg-6 col-xs-12">
-                    <button type="button" class="btn btn-primary btn-lg" id="change-location">Feed My Food Hole Here!</button>
+                    <button type="button" class="btn btn-location btn-lg" id="change-location">Feed My Food Hole Here!</button>
                   </div>
                 </div>
               </section>
               <div class="hide-map-area">
-                <button type="button" class="btn btn-primary" id="hide-map-button">Hide Map</button>
+                <button type="button" class="btn btn-hide" id="hide-map-button">Hide Map</button>
               </div>
             </div>
           </div>
@@ -104,10 +104,10 @@
       <section class="container">
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
-            <h2>Reviews</h2>
-            <div class="col-xs-4 col-md-offset-5">
-              <button type="button" class="btn btn-primary btn-md" id="create-button">Create Review</button>
+            <div class="text-center">
+              <button type="button" class="btn btn-createReview btn-md" id="create-button">Create Review</button>
             </div>
+            <h2>Reviews</h2>
             <!-- sandwich reviews -->
             <div class="appendReviews">
               <script id='review-template' type='text/x-handlebars-template'>
@@ -122,8 +122,8 @@
                       <p>Sandwich Stars: {{reviewStars}}</p>
                       <p>Recommended: {{reviewRecommend}}</p>
                       <p>{{reviewContent}}</p>
-                      <button type="button" class="{{reviewId}} btn btn-warning btn-sm" id="edit-button">Edit</button>
-                      <button type="button" class="{{reviewId}} btn btn-warning btn-sm" id="delete-button">Delete</button>
+                      <button type="button" class="{{reviewId}} btn btn-revision btn-sm" id="edit-button">Edit</button>
+                      <button type="button" class="{{reviewId}} btn btn-revision btn-sm" id="delete-button">Delete</button>
                     </article>
                   </div>
                 </div>
