--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
   <body>
       <div class="title-section">
         <div class="container site-title">
-          <h1 class="font-effect-3d">Where's My Hero!?</h1>
+          <h1 class="font-effect-3d" id="wheres-my-hero">Where's My Hero!?</h1>
           <div class="picDiv">
             <img class="sandwichBatman" src="https://aunicornwithcancer.files.wordpress.com/2013/01/hero_sandwich_by_stanlydan-d39c77b.jpg" height="175" style="max-width: 320px">
             <img class="sandwichPic" src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="175" style="max-width: 320px">
@@ -107,7 +107,7 @@
             <div class="text-center">
               <button type="button" class="btn btn-createReview btn-md" id="create-button">Create Review</button>
             </div>
-            <h2>Reviews</h2>
+            <h2 class="font-effect-3d" id="reviews">Reviews</h2>
             <!-- sandwich reviews -->
             <div class="appendReviews">
               <script id='review-template' type='text/x-handlebars-template'>
