--- a/views/index.html
+++ b/views/index.html
@@ -76,7 +76,7 @@
       <!-- map section -->
       <section class="map-section">
         <div class="find-hero-button">
-          <button type="button" class="btn btn-findHero" id="map-button">Find A Hero</button>
+          <button type="button" class="btn btn-findHero btn-lg" id="map-button">Find A Hero</button>
         </div>
         <article class="container">
           <div class="row">
@@ -84,16 +84,16 @@
               <div id="mapPlacement"></div>
               <section class="container-fluid">
                 <div class="row">
-                  <div class="current-location col-lg-6 col-xs-12">
-                    <button type="button" class="btn btn-closest btn-lg" id="current-location">Closest Food To My Face!</button>
+                  <div class="current-location col-lg-6 col-xs-6 text-center">
+                    <button type="button" class="btn btn-closest btn-md" id="current-location">Closest Food To My Face!</button>
                   </div>
-                  <div class="change-location col-lg-6 col-xs-12">
-                    <button type="button" class="btn btn-location btn-lg" id="change-location">Feed My Food Hole Here!</button>
+                  <div class="change-location col-lg-6 col-xs-6 text-center">
+                    <button type="button" class="btn btn-location btn-md" id="change-location">Feed My Food Hole Here!</button>
                   </div>
                 </div>
               </section>
               <div class="hide-map-area">
-                <button type="button" class="btn btn-hide" id="hide-map-button">Hide Map</button>
+                <button type="button" class="btn btn-hide btn-lg" id="hide-map-button">Hide Map</button>
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
             <div class="text-center">
-              <button type="button" class="btn btn-createReview btn-md" id="create-button">Create Review</button>
+              <button type="button" class="btn btn-createReview btn-lg" id="create-button">Create Review</button>
             </div>
             <h2 class="font-effect-3d" id="reviews">Reviews</h2>
             <!-- sandwich reviews -->
