--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -51,7 +51,7 @@
     margin-left: 40%;
   }
 
-  h1, h2, legend {
+  h1, h2, legend, .batwich-chat, .hero-chat {
     text-align: center;
     /*text-shadow: 7px 5px 5px #E5563C;*/
     /*font-family: 'Indie Flower', cursive;*/
@@ -101,20 +101,33 @@
   }
 
   #batwich-bubble {
-    -moz-transform: scaleY(-1);
+    /*-moz-transform: scaleY(-1);
     -o-transform: scaleY(-1);
     -webkit-transform: scaleY(-1);
     transform: scaleY(-1);
     filter: FlipV;
     -ms-filter: "FlipV";
+    background-image: */
+
   }
 
   #hero-bubble {
-    -webkit-transform: rotate(180deg);
+    /*-webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
     -o-transform: rotate(180deg);
     -ms-transform: rotate(180deg);
-    transform: rotate(180deg);
+    transform: rotate(180deg);*/
+  }
+
+  .batwich-chat, .hero-chat {
+    border: solid 5px black;
+    min-height: 160px;
+    padding: 2px;
+    text-align: center;
+    vertical-align: 40%;
+    border-radius: 10px;
+
+    /*border-radius: 8px;*/
   }
 
   .batman-box {
@@ -127,10 +140,8 @@
     padding: 0px;
   }
 
-  #hero-bubble, #batwich-bubble {
-    padding: 2px;
-    text-align: center;
-    vertical-align: middle;
+  .hero-box {
+    padding-left: 0px;
   }
 
 
