--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -86,7 +86,7 @@
 
   body {
     /*font-family: Calibria, serif;*/
-    /*background-color: #0B543E;*/
+    background-color: #0B543E;
   }
 
   .site-title {
