--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,6 +1,6 @@
-/** {
+* {
   border: dashed 1px black;
-}*/
+}
 
 .gifBox {
   min-height: 150px;
@@ -85,6 +85,7 @@
   .font-effect-3d {
     display: inline-block;
     font-size: 100px;
+    margin-left: 13%
   }
 
   #wheres-my-hero {
@@ -94,18 +95,13 @@
   .sandwichBatman {
     display: inline-block;
     float: left;
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-left: 25%;
     border: 5px solid black;
-    transform: scaleX(-1);
   }
 
   .sandwichPic {
     display: inline-block;
     float: right;
-    margin-top: 10px;
-    margin-right: 25%;
+    /*margin-top: 10px;*/
     border: 5px solid black;
   }
 
@@ -184,7 +180,7 @@
     /*border-radius: 8px;*/
   }
 
-  .batman-box {
+  /*.batman-box {
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
@@ -192,7 +188,7 @@
     filter: FlipH;
     -ms-filter: "FlipH";
     padding: 0px;
-  }
+  }*/
 
   .hero-box {
     padding-left: 0px;
