title section changes

--- a/views/index.html
+++ b/views/index.html
@@ -196,9 +196,11 @@
                           <img class="review-gif center" src="{{reviewGif}}"></a>
                         </div>
                       </div>
+                      <div class= "paragraphs">
                       <p>Sandwich Stars: {{reviewStars}}</p>
                       <p>Recommended: {{reviewRecommend}}</p>
                       <p>{{reviewContent}}</p>
+                    </div>
                     </article>
                   </div>
                 </div>
