translate header across edit and create pages

--- a/views/index.html
+++ b/views/index.html
@@ -184,6 +184,9 @@
                         <button type="button" class="{{reviewId}} btn btn-revision btn-sm" id="edit-button">Edit</button>
                         <button type="button" class="{{reviewId}} btn btn-revision btn-sm" id="delete-button">Delete</button>
                       </div>
+                      <div class="clearfix">
+                        <p>author</p>
+                      </div>
                     </article>
                   </div>
                 </div>
@@ -204,6 +207,9 @@
                           <p>Recommended: {{reviewRecommend}}</p>
                           <p>{{reviewContent}}</p>
                         </div>
+                      </div>
+                      <div class="clearfix">
+                        <p>author: </p>
                       </div>
                     </div>
                     </article>
