--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,6 +1,6 @@
-* {
+/** {
   border: dashed 1px black;
-}
+}*/
 
 .gifBox {
   min-height: 150px;
@@ -111,7 +111,8 @@
   }
 
   button {
-    background-color: green;
+    background-color: #F4B260;
+    color: white;
   }
 
   #create-button {
@@ -121,14 +122,19 @@
   #map-button {
     margin-top: 50px;
   }
-/*
+
   #edit-button {
-    background-color: green;
+    margin-top: 20px;
   }
 
   #delete-button {
-    background-color: green;
-  }*/
+    margin-top: 20px;
+    background-color: red;
+  }
+
+  #gifId {
+    margin-top: 15px
+  }
 
   body {
     /*background-color: #0B543E;*/
@@ -214,6 +220,16 @@ li {
 
 .pic img {
   width: 100%;
+  height: auto;
+}
+
+.review-gif {
+  margin-top: 10%;
+}
+
+p {
+  margin-top: 25px;
+  font-family: fantasy;
 }
 
 /*Hidden Class*/
