--- a/views/create.html
+++ b/views/create.html
@@ -25,14 +25,102 @@
   </head>
 
   <body>
-    <div class="jumbotron">
-      <div class="container site-title">
-        <h1 class="font-effect-3d">Where's My Hero!?</h1>
-      </div>
-      <div class="site-logo center">
-        <img src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="250" style="max-width: 320px">
+    <div class="modal fade bs-example-modal-lg sign-up-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <h2>Sign Up</h2>
+          <br>
+          <form method="POST" action="/signup">
+            <div class="row">
+              <div class="col-xs-8 col-xs-offset-2">
+                <div class="form-group">
+                  <input type="text" name="username" class="form-control" placeholder="Username" autofocus>
+                </div>
+                <div class="form-group">
+                  <input type="password" name="password" class="form-control" placeholder="Password">
+                </div>
+                <div class="form-group">
+                  <input type="submit" class="btn btn-block btn-primary" value="Sign Up">
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
+
+    <!-- Login Modal -->
+
+    <div class="modal fade bs-example-modal-lg login-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <h2>Log In</h2>
+          <br>
+          <form method="POST" action="/login">
+            <div class="row">
+              <div class="col-xs-8 col-xs-offset-2">
+                <div class="form-group">
+                  <input type="text" name="username" class="form-control" placeholder="Username" autofocus>
+                </div>
+                <div class="form-group">
+                  <input type="password" name="password" class="form-control" placeholder="Password">
+                </div>
+                <div class="form-group">
+                  <input type="submit" class="btn btn-block btn-primary" value="Log In">
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+      <div class="title-section">
+        <div class="container">
+
+<!--********************-->
+
+           <!-- Buttons that trigger the signup and login modals, logout -->
+        <div class="row">
+          <div class="col-xs-1">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".sign-up-modal">Sign up</button>
+          </div>
+          <div class="col-xs-1">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".login-modal">Login</button>
+          </div>
+          <div class="col-xs-1">
+            <form method="GET" action="/logout">
+              <button type="submit" class="btn btn-danger">Logout</button>
+            </form>
+          </div>
+        </div>
+
+<!--********************-->
+
+          <div class="site-title">
+            <h1 class="font-effect-3d">Where's My Hero!?</h1>
+          </div>
+          <div class="picDiv row">
+            <div class="col-xs-2 batman-box">
+              <img class="sandwichBatman" src="https://aunicornwithcancer.files.wordpress.com/2013/01/hero_sandwich_by_stanlydan-d39c77b.jpg" height="175" style="max-width: 320px">
+            </div>
+            <section class="col-xs-4">
+              <div class="col-xs-12 batwich-chat">
+                <!-- <img id="batwich-bubble" src="http://cliparts.co/cliparts/8TG/ErX/8TGErXjqc.png" alt="hero chat bubble" height="175" width="100%"> -->
+              </div>
+            </section>
+            <section class="col-xs-4">
+              <div class="col-xs-12 hero-chat">
+                <!-- <img id="hero-bubble" src="http://cliparts.co/cliparts/8TG/ErX/8TGErXjqc.png" alt="hero chat bubble" height="175" width="100%"> -->
+              </div>
+            </section>
+            <div class="col-xs-2 hero-box">
+              <img class="sandwichPic" src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="175" style="max-width: 320px">
+            </div>
+          </div>
+        </div>
+      </div>
+
 
     <!-- ***** restaurant selection ***** -->
     <section id='business-form' class="business-forms container">
