cleaned up code. changed chat box area.  changed review border.

--- a/views/index.html
+++ b/views/index.html
@@ -79,51 +79,46 @@
       </div>
     </div>
 
-      <div class="title-section">
-        <div class="container">
+    <div class="title-section">
+      <div class="container">
 
-<!--********************-->
-
-           <!-- Buttons that trigger the signup and login modals, logout -->
-        <div class="row">
-          <div class="col-xs-1">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".sign-up-modal">Sign up</button>
-          </div>
-          <div class="col-xs-1">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".login-modal">Login</button>
-          </div>
-          <div class="col-xs-1">
-            <form method="GET" action="/logout">
-              <button type="submit" class="btn btn-danger">Logout</button>
-            </form>
-          </div>
+         <!-- Buttons that trigger the signup and login modals, logout -->
+      <div class="row">
+        <div class="col-xs-1">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".sign-up-modal">Sign up</button>
         </div>
-
-<!--********************-->
-
-          <div class="site-title">
-            <h1 class="font-effect-3d">Where's My Hero!?</h1>
+        <div class="col-xs-1">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".login-modal">Login</button>
+        </div>
+        <div class="col-xs-1">
+          <form method="GET" action="/logout">
+            <button type="submit" class="btn btn-danger">Logout</button>
+          </form>
+        </div>
+      </div>
+        <div class="site-title">
+          <h1 class="font-effect-3d">Where's My Hero!?</h1>
+        </div>
+        <div class="picDiv row">
+          <div class="col-xs-2 batman-box">
+            <img class="sandwichBatman" src="https://aunicornwithcancer.files.wordpress.com/2013/01/hero_sandwich_by_stanlydan-d39c77b.jpg" height="175" style="max-width: 320px">
           </div>
-          <div class="picDiv row">
-            <div class="col-xs-2 batman-box">
-              <img class="sandwichBatman" src="https://aunicornwithcancer.files.wordpress.com/2013/01/hero_sandwich_by_stanlydan-d39c77b.jpg" height="175" style="max-width: 320px">
+          <section class="col-xs-4">
+            <div class="col-xs-12 batwich-chat">
+              <!-- batwich chat goes here -->
             </div>
-            <section class="col-xs-4">
-              <div class="col-xs-12 batwich-chat">
-                <!-- <img id="batwich-bubble" src="http://cliparts.co/cliparts/8TG/ErX/8TGErXjqc.png" alt="hero chat bubble" height="175" width="100%"> -->
-              </div>
-            </section>
-            <section class="col-xs-4">
-              <div class="col-xs-12 hero-chat">
-                <!-- <img id="hero-bubble" src="http://cliparts.co/cliparts/8TG/ErX/8TGErXjqc.png" alt="hero chat bubble" height="175" width="100%"> -->
-              </div>
-            </section>
-            <div class="col-xs-2 hero-box">
-              <img class="sandwichPic" src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="175" style="max-width: 320px">
+          </section>
+          <section class="col-xs-4">
+            <div class="col-xs-12 hero-chat">
+              <!-- hero chat goes here -->
             </div>
+          </section>
+          <div class="col-xs-2 hero-box">
+            <img class="sandwichPic" src="http://i.giphy.com/DpB9NBt1ySFDHH9yiCA.gif" alt="our hero!" height="175" style="max-width: 320px">
           </div>
         </div>
       </div>
+    </div>
 
       <!-- map section -->
       <section class="map-section">
@@ -159,8 +154,11 @@
             <div class="text-center">
               <button type="button" class="btn btn-createReview btn-lg" id="create-button">Create Review</button>
             </div>
+            <div class="row review-word">
+              <h2 class="font-effect-3d">Reviews</h2>
+            </div>
 
-            <h2 class="font-effect-3d" id="reviews">Reviews</h2>
+
             <!-- sandwich reviews -->
             <div class="appendReviews">
 
