--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,94 +2,10 @@
   border: dashed 1px black;
 }*/
 
-.gifBox {
-  min-height: 150px;
-  text-align: center;
-}
-
-.rating {
-      overflow: hidden;
-      display: inline-block;
-  }
-
-  .rating-input {
-      float: right;
-      width: 16px;
-      height: 16px;
-      padding: 0;
-      margin: 0 0 0 -16px;
-      opacity: 0;
-}
-
-  .rating-star {
-      position: relative;
-      float: right;
-      display: block;
-      width: 16px;
-      height: 16px;
-      background: url('http://kubyshkin.ru/samples/star-rating/star.png') 0 -16px;
-  }
-
-  .rating:hover .rating-star:hover,
-  .rating:hover .rating-star:hover ~ .rating-star,
-  .rating-input:checked ~ .rating-star {
-      background-position: 0 0;
-  }
-  .rating-star,
-  .rating:hover .rating-star {
-      position: relative;
-      float: right;
-      display: block;
-      width: 16px;
-      height: 16px;
-      background: url('http://kubyshkin.ru/samples/star-rating/star.png') 0 -16px;
-  }
-
   .site-logo {
     max-width:100px;
     height:auto;
     margin-left: 40%;
-  }
-
-  h1, h2, legend, .batwich-chat, .hero-chat {
-    text-align: center;
-    /*text-shadow: 7px 5px 5px #E5563C;*/
-    /*font-family: 'Indie Flower', cursive;*/
-    font-family: 'Gloria Hallelujah', cursive;
-    clear: left;
-  }
-
-  #reviews {
-    font-size: 50px;
-    margin-left: 40%;
-  }
-
-  .reviewIndividual {
-    border: solid 2px green;
-    background-color: rgba(250, 240, 250, 0.3);
-    margin-bottom: 15px;
-    border-radius: 0px 70px 0px 0px;
-  }
-
-  .review-gif {
-    min-height: 200px;
-  }
-
-  #singlebuttonSubmit {
-    margin-left: 25px;
-  }
-
-  .site-title {
-    padding-bottom: 15px;
-  }
-  .font-effect-3d {
-    display: inline-block;
-    font-size: 100px;
-    margin-left: 13%
-  }
-
-  #wheres-my-hero {
-    margin-left: 13%;
   }
 
   .sandwichBatman {
@@ -102,16 +18,78 @@
   .sandwichPic {
     display: inline-block;
     float: right;
-    /*margin-top: 10px;*/
     border: 5px solid black;
   }
 
-  .find-hero-button, .hide-map-area {
+  .site-title {
+    padding-bottom: 15px;
+  }
+
+  .review-word {
+    text-align: left;
+  }
+
+  .gifBox {
+    min-height: 150px;
     text-align: center;
   }
 
+  .rating {
+    overflow: hidden;
+    display: inline-block;
+  }
+
+  .rating-input {
+    float: right;
+    width: 16px;
+    height: 16px;
+    padding: 0;
+    margin: 0 0 0 -16px;
+    opacity: 0;
+  }
+
+  .rating-star {
+    position: relative;
+    float: right;
+    display: block;
+    width: 16px;
+    height: 16px;
+    background: url('http://kubyshkin.ru/samples/star-rating/star.png') 0 -16px;
+  }
+
+  .rating:hover .rating-star:hover,
+  .rating:hover .rating-star:hover ~ .rating-star,
+  .rating-input:checked ~ .rating-star {
+    background-position: 0 0;
+  }
+  .rating-star,
+  .rating:hover .rating-star {
+    position: relative;
+    float: right;
+    display: block;
+    width: 16px;
+    height: 16px;
+    background: url('http://kubyshkin.ru/samples/star-rating/star.png') 0 -16px;
+  }
+
+  .reviewIndividual {
+    border: solid 2px black;
+    background-color: rgba(250, 240, 250, 0.3);
+    margin-bottom: 15px;
+    border-radius: 0px 70px 0px 0px;
+  }
+
+  .review-gif {
+    min-height: 200px;
+  }
+
+  h1, h2, legend, .batwich-chat, .hero-chat {
+    text-align: center;
+    font-family: 'Gloria Hallelujah', cursive;
+  }
+
   button {
-    background-color: #F4B260;
+    background-color: #3776BC;
     color: white;
   }
 
@@ -119,8 +97,12 @@
     margin-top: 50px;
   }
 
-  #map-button {
-    margin-top: 50px;
+  .hide-map-area {
+    margin-top: 20px;
+  }
+
+  .find-hero-button, .hide-map-area {
+    text-align: center;
   }
 
   #edit-button {
@@ -137,42 +119,12 @@
   }
 
   body {
-    /*background-color: #0B543E;*/
-    /*background: linear-gradient(80deg, #C0281B, black 40%, #C0281B);*/
     background: linear-gradient(225deg, #74C5FF, white);
   }
-
 
   h1 {
     font-size: 70px;
     padding
-  }
-
-  .find-hero-button, .hide-map-area {
-    text-align: center;
-  }
-
-  .hide-map-area {
-    margin-top: 20px;
-  }
-
-  #batwich-bubble {
-    /*-moz-transform: scaleY(-1);
-    -o-transform: scaleY(-1);
-    -webkit-transform: scaleY(-1);
-    transform: scaleY(-1);
-    filter: FlipV;
-    -ms-filter: "FlipV";
-    background-image: */
-
-  }
-
-  #hero-bubble {
-    /*-webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    transform: rotate(180deg);*/
   }
 
   .batwich-chat, .hero-chat {
@@ -184,53 +136,44 @@
     border-radius: 10px;
     padding-top: 17%;
     font-size: 17px;
-    /*border-radius: 8px;*/
+    background-color: rgba(21,71,140,0.5);
+    color: #96D5FF;
   }
 
-  /*.batman-box {
-    -moz-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-    filter: FlipH;
-    -ms-filter: "FlipH";
-    padding: 0px;
-  }*/
-
-  .hero-box {
-    padding-left: 0px;
+  /*Create Page Formatting*/
+  li:hover {
+    background-color: rgba(45, 77, 150, .5);
   }
 
-/*Create Page Formatting*/
-li:hover {
-  background-color: rgba(45, 77, 150, .5);
-}
-
-li {
-  text-align: center;
-}
+  li {
+    text-align: center;
+  }
 
 /*Styling related to the map section*/
 
-#mapPlacement {
-  height: 400px; /*map size has to be created manually. Feel free to edit for beautification*/
-  width: 100%;
-  margin-top: 20px;
-}
+  #mapPlacement {
+    height: 400px;
+    width: 100%;
+    margin-top: 20px;
+  }
 
-.pic img {
-  width: 100%;
-  height: auto;
-}
+  .pic img {
+    width: 100%;
+    height: auto;
+  }
 
-.review-gif {
-  margin-top: 10%;
-}
+  .review-gif {
+    margin-top: 10%;
+  }
 
-p {
-  margin-top: 25px;
-  font-family: fantasy;
-}
+  p {
+    margin-top: 25px;
+    font-family: 'Indie Flower', cursive;
+  }
+
+  #singlebuttonSubmit {
+    margin-left: 25px;
+  }
 
 /*Hidden Class*/
 
