hide and reveal buttons

--- a/views/index.html
+++ b/views/index.html
@@ -87,14 +87,14 @@
            <!-- Buttons that trigger the signup and login modals, logout -->
         <div class="row">
           <div class="col-xs-1">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".sign-up-modal">Sign up</button>
+            <button type="button" class="btn btn-primary sign-up" data-toggle="modal" data-target=".sign-up-modal">Sign up</button>
           </div>
           <div class="col-xs-1">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".login-modal">Login</button>
+            <button type="button" class="btn btn-primary login" data-toggle="modal" data-target=".login-modal">Login</button>
           </div>
           <div class="col-xs-1">
             <form method="GET" action="/logout">
-              <button type="submit" class="btn btn-danger">Logout</button>
+              <button type="submit" class="btn btn-danger logout">Logout</button>
             </form>
           </div>
         </div>
@@ -157,7 +157,7 @@
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
             <div class="text-center">
-              <button type="button" class="btn btn-createReview btn-lg" id="create-button">Create Review</button>
+              <button type="button" class="btn btn-createReview btn-lg create" id="create-button">Create Review</button>
             </div>
 
             <h2 class="font-effect-3d" id="reviews">Reviews</h2>
@@ -185,7 +185,7 @@
                         <button type="button" class="{{reviewId}} btn btn-revision btn-sm" id="delete-button">Delete</button>
                       </div>
                       <div class="clearfix">
-                        <p>author</p>
+                        <p>author: {{author}}</p>
                       </div>
                     </article>
                   </div>
@@ -209,7 +209,7 @@
                         </div>
                       </div>
                       <div class="clearfix">
-                        <p>author: </p>
+                        <p>author: {{author}}</p>
                       </div>
                     </div>
                     </article>
